# sf-experiments

./: CMakeLists.txt  LICENSE  README.md  accel-decel.cpp  speed-cycle.cpp
c++-wrapper/: CMakeLists.txt  sf.cpp  sf.h
c++-wrapper/test/: CMakeLists.txt  CREDITS  main.cpp  wrapper-test.cpp
